...
      />
      {showShare ? (
        <BarButton
          icon="share-outline"
          label="Share"
          onPress={onShare}
          accessibilityLabel="share question"
          iconColor={iconColor}
        />
      ) : null}
      <BarButton
        icon="chevron-forward"
        label="Next"
...
